--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,8 @@ node {
 	}
 	
 	stage('Build') { 
-        sh 'cd ${workspace}/pystache; chmod 755 *; ./run_tests_with_coverage.sh' 
-    }
+	        def workspace = pwd()
+                sh 'cd ${workspace}; cd ../pystache; chmod 755 *; ./run_tests_with_coverage.sh' 
+        }
 
 }
