--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,9 +9,10 @@ node {
 		);
 	}
 	
-	stage('Build') { 
+	stage('JUnit Test') { 
 	        
-                sh 'chmod 755 *; ./run_tests_with_coverage.sh' 
+                sh 'chmod 755 *; ./run_junit_test.sh' 
+		step([$class: 'JUnitResultArchiver', testResults: 'python_tests_xml/*'])
         }
 
 }
