--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,7 +35,7 @@ node {
 	
 	stage('Code Coverage Check') { 
                 sh './run_code_coverage_test.sh' 
-		step([$class: 'CloverPublisher', cloverReportFileName: 'clover.xml'])
+		step([$class: 'CloverPublisher', cloverReportDir: 'reports', cloverReportFileName: 'clover.xml'])
 		if (currentBuild.result == 'UNSTABLE')
 		{
                          currentBuild.result = 'FAILURE'
