--- a/JenkinsFile
+++ b/JenkinsFile
@@ -35,7 +35,9 @@ node {
 	
 	stage('Code Coverage Check') { 
                 sh './run_code_coverage_test.sh' 
-		step([$class: 'CloverPublisher', cloverReportDir: 'reports', cloverReportFileName: 'clover.xml'])
+
+		step([$class: 'CoberturaPublisher', coberturaReportFile: 'coverage.xml'])
+
 		if (currentBuild.result == 'UNSTABLE')
 		{
                          currentBuild.result = 'FAILURE'
